--- a/TMessagesProj/src/main/res/layout/fragment_sign_up.xml
+++ b/TMessagesProj/src/main/res/layout/fragment_sign_up.xml
@@ -5,152 +5,11 @@
     android:layout_height="match_parent"
     android:background="@android:color/black">
 
-
     <ImageView
         android:id="@+id/signupfragment_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:background="#77000000"
-        android:gravity="bottom"
-        android:orientation="vertical"
-        android:padding="48dp">
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/signup_fragment_LinearLayout_height"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal"
-            android:visibility="invisible"
-            android:weightSum="5">
-
-            <EditText
-                android:id="@+id/editText_firstName"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="4"
-                android:background="#77FFFFFF"
-                android:hint="@string/fragment_sign_up_first_name"
-                android:maxLength="20"
-                android:maxLines="1"
-                android:padding="8dp"
-                android:singleLine="true"
-                android:ellipsize="end"
-                android:textColor="#FFFFFF"
-                android:textColorHint="#FFFFFF"
-                android:textSize="@dimen/signup_fragment_EditText_textsize" />
-
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#77FFFFFF"
-                android:padding="8dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/username_white" />
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/signup_fragment_LinearLayout_height"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal"
-            android:visibility="invisible"
-
-            android:weightSum="5">
-
-            <EditText
-                android:id="@+id/editText_lastName"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="4"
-                android:background="#77FFFFFF"
-                android:hint="@string/fragment_sign_up_last_name"
-                android:maxLength="20"
-                android:maxLines="1"
-                android:padding="8dp"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:textColor="#FFFFFF"
-                android:textColorHint="#FFFFFF"
-                android:textSize="@dimen/signup_fragment_EditText_textsize" />
-
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#77FFFFFF"
-                android:padding="8dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/username_white" />
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/signup_fragment_LinearLayout_height"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal"
-            android:visibility="invisible"
-
-            android:weightSum="5">
-
-            <EditText
-                android:id="@+id/editText_phoneNumber"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="4"
-                android:background="#77FFFFFF"
-                android:hint="@string/fragment_sign_up_phone_number"
-                android:inputType="phone"
-                android:maxLength="15"
-                android:maxLines="1"
-                android:padding="8dp"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:textColor="#FFFFFF"
-                android:textColorHint="#FFFFFF"
-                android:textSize="@dimen/signup_fragment_EditText_textsize" />
-
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#77FFFFFF"
-                android:padding="8dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/phone" />
-
-        </LinearLayout>
-
-
-        <com.dd.CircularProgressButton
-            android:id="@+id/btnWithText"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/signup_fragment_LinearLayout_height"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/signup_fragment_CircularProgressButton_textsize"
-            app:cpb_colorIndicator="@color/accent"
-            app:cpb_colorIndicatorBackground="@color/primary_dark"
-            app:cpb_colorProgress="#00000000"
-            app:cpb_selectorIdle="@drawable/enter_btn_selector"
-            app:cpb_textComplete="@string/fragment_sign_up_btn_success_text"
-            app:cpb_textError="@string/fragment_sign_up_btn_error_text"
-            app:cpb_textIdle="@string/fragment_sign_up_btn_text" />
-
-    </LinearLayout>
-
 
     <TextView
         android:id="@+id/title"
@@ -164,4 +23,50 @@
         android:textSize="@dimen/signup_fragment_Title_textsize" />
 
 
+
+    <com.dd.CircularProgressButton
+            android:id="@+id/btnWithText"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/signup_fragment_LinearLayout_height"
+            android:layout_gravity="center_horizontal"
+
+            android:layout_marginTop="24dp"
+            android:layout_marginLeft="48dp"
+            android:layout_marginRight="48dp"
+            android:layout_marginBottom="48dp"
+
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/signup_fragment_CircularProgressButton_textsize"
+            app:cpb_colorIndicator="@color/accent"
+            app:cpb_colorIndicatorBackground="@color/primary_dark"
+            app:cpb_colorProgress="#00000000"
+            app:cpb_selectorIdle="@drawable/enter_btn_selector"
+            app:cpb_textComplete="@string/fragment_sign_up_btn_success_text"
+            app:cpb_textError="@string/fragment_sign_up_btn_error_text"
+            app:cpb_textIdle="@string/btn_ok_text" />
+
+
+    <TextView
+        android:id="@+id/textView_term_of_use"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+
+        android:layout_marginTop="48dp"
+        android:layout_marginLeft="48dp"
+        android:layout_marginRight="48dp"
+        android:layout_marginBottom="24dp"
+
+
+        android:padding="16dp"
+        android:layout_below="@id/title"
+        android:layout_above="@id/btnWithText"
+        android:textColor="@android:color/white"
+        android:text="@string/rules_of_add_channel"
+        android:background="#55000000"
+        android:textSize="@dimen/signup_fragment_EditText_textsize"
+        android:lineSpacingExtra="4dp"
+        android:scrollbars="vertical"/>
 </RelativeLayout>
